adding typing for using module import with highchart solid-gauge lib

--- a/types/highcharts/tsconfig.json
+++ b/types/highcharts/tsconfig.json
@@ -23,6 +23,7 @@
         "modules/exporting.d.ts",
         "modules/no-data-to-display.d.ts",
         "modules/offline-exporting.d.ts",
+        "modules/solid-gauge.d.ts",
         "highcharts-more.d.ts",
         "highstock.d.ts",
         "test/boost.ts",
